clusters/home/apps/privatebin/privatebin-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: privatebin-ingress
  namespace: privatebin
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # traefik.ingress.kubernetes.io/router.middlewares: authelia-authelia-forwardauth@kubernetescrd


spec:
  rules:
  - host: paste.bytechance.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: privatebin
            port:
              number: 80
  tls:
  - hosts:
    - paste.bytechance.dev
    secretName: privatebin-tls
